--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,3 @@
-title: "My Newsletter"
+title: "My Newsletter - Test 1"
 heading: "Welcome to the Newsletter"
 body: "This is the body of the newsletter. Here you can put any information you want."
