--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,11 @@
-title: "My Newsletter - Test 1"
-heading: "Welcome to the Newsletter"
-body: "This is the body of the newsletter. Here you can put any information you want."
+title: "Upcoming Training"
+heading: "Places are now available for upcoming Research Computing training courses, sign up now!"
+body: "Listed below are the training sessions we are hosting in the coming weeks."
 
 events:
-  - title: "Event 1"
+  - title: "Introduction to Python programming"
     date: "2024-06-10"
-    tags: ["tag1", "tag2"]
+    tags: ["2 Days", "In-Person"]
     link: "https://example.com/event1"
     
   - title: "Event 2"
