--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
-title: "Upcoming Training"
-heading: "Places are now available for upcoming Research Computing training courses, sign up now!"
-body: "Listed below are the training sessions we are hosting in the coming weeks."
+title: "Upcoming Training wqe "
+heading: "aaa Places are now available for upcoming Research Computing training courses, sign up now!"
+body: "111 Listed below are the training sessions we are hosting in the coming weeks."
 
 events:
   - title: "Introduction to Python programming"
