--- a/config.yaml
+++ b/config.yaml
@@ -6,9 +6,12 @@ events:
   - title: "Event 1"
     date: "2024-06-10"
     tags: ["tag1", "tag2"]
+    summary: "This is a summary of the event."
     link: "https://example.com/event1"
     
   - title: "Event 2"
     date: "2024-06-15"
     tags: ["tag3", "tag4"]
+    summary: "This is an introduction to programming in Python for people with little or no previous programming experience."
     link: "https://example.com/event2"
+    
