--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,9 @@ events:
   - title: "Event 1"
     dates:
       - 2024-02-20
-    tags: ["tag1", "tag2"]
+    tags:
+      - "tag1"
+      - "tag2"
     summary: "This is a summary of the event."
     link: "https://example.com/event1"
     
@@ -14,7 +16,9 @@ events:
     dates:
       - 2024-03-05
       - 2024-03-12
-    tags: ["tag3", "tag4"]
+    tags:
+      - "tag3"
+      - "tag4"
     summary: "This is an introduction to programming in Python for people with little or no previous programming experience."
     link: "https://example.com/event2"
     
