--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ events:
       - "tag1"
       - "tag2"
     summary: "This is a summary of the event."
-    link: "https://example.com/event1"
+    url: "https://example.com/event1"
     
   - title: "Event 2"
     dates:
@@ -19,6 +19,7 @@ events:
     tags:
       - "tag3"
       - "tag4"
+      - "tag5"
     summary: "This is an introduction to programming in Python for people with little or no previous programming experience."
-    link: "https://example.com/event2"
+    url: "https://example.com/event2"
     
